fixing previews on safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,8 +7,9 @@ body {
     normal 14px Verdana,
     Arial,
     sans-serif;
-}
-body {
+
+  /* width: 100%; */
+
   /* margin: 0 auto; */
   /* make room for the left hand side */
   margin-left: 300px;
